# CameraMedia

./: .gitignore  settings.gradle
app/: build.gradle
app/src/androidTest/java/you/chen/media/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  ConvertNV.cpp  ConvertNV.h  Log.h  RotateNV_UV.cpp  RotateNV_UV.h  native-lib.cpp
app/src/main/java/you/chen/media/: App.java  Test.java  YuvTests.java
app/src/main/java/you/chen/media/camera/: CameraHelper.java  CameraUtils.java  OrientationHelper.java  SizeFilter.java
app/src/main/java/you/chen/media/core/: BytePool.java  Constant.java  MediaEncoder.java  MediaUtils.java  Orientation.java  Transform.java  YuvUtils.java
app/src/main/java/you/chen/media/rx/: NothingSubscribe.java  RequestRetry.java  RxUtils.java  ThrowableConsumer.java
app/src/main/java/you/chen/media/ui/: AacActivity.java  Camera2Activity.java  CameraActivity.java  H264Activity.java  MainActivity.java  Mp4Activity.java  ScanActivity.java  TestActivity.java  ViewTestActivity.java
app/src/main/java/you/chen/media/utils/: BitmapUtils.java  FileUtils.java  LogUtils.java  Utils.java  ViewUtils.java
app/src/main/res/color/: flash_camera.xml
app/src/main/res/drawable/: flash_camera.xml
app/src/main/res/layout/: act_aac.xml  act_camera.xml  act_h264.xml  act_main.xml  act_mp4.xml  act_pcm.xml  act_scan.xml  act_test.xml  act_viewtest.xml  include_flash.xml
app/src/main/res/values/: strings.xml  styles.xml
app/src/test/java/you/chen/media/: ExampleUnitTest.java
(+33 files in other folders)
